Fix alignment of Description column header to match new size of description tile contents

--- a/frontend/packages/portal-frontend/src/dataPage/styles/DataFilePanel.scss
+++ b/frontend/packages/portal-frontend/src/dataPage/styles/DataFilePanel.scss
@@ -12,13 +12,13 @@
       .headerColOne {
         color: #707070;
         font-size: 14px;
-        grid-column: 1/4;
+        grid-column: 1/5;
         grid-row: 1;
       }
       .headerColTwo {
         color: #707070;
         font-size: 14px;
-        grid-column: 4/8;
+        grid-column: 5/8;
         grid-row: 1;
       }
       .headerColThree {
